# painel_pj

./: .dockerignore  .env.example  .env.local.example  .gitignore  AGENTS.md  ARCHITECTURE.md  COMMIT_MESSAGE.txt  DIAGNOSTICO_VARIAVEIS_DETERMINISTICAS.md  Dockerfile  Dockerfile.worker  README.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  agent.md  analise.md  categorias_documentos.json  config.py  conftest.py  docker-compose.yml  frontend_specs.md  homologacao.bat  iniciar.bat  interface_edição_prompt.md  main.py  migracao_ts.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  requirements_app.txt  requirements_worker.txt  reset_db_cache.bat  run.bat  run.sh  run_migration.py  run_tests.py  run_tests.sh  run_worker.sh  setup.py  sistema_relatorio_cumprimento.md  (+6 more)
.claude/: CLAUDE.md  settings.local.json
admin/: __init__.py  dashboard_router.py  ia_context.py  middleware_performance.py  models.py  models_gemini_logs.py  models_performance.py  models_prompt_groups.py  models_prompts.py  models_request_perf.py  perf_context.py  perf_instrumentation.py  router.py  router_gemini_logs.py  router_performance.py  router_prompts.py  schemas.py  seed_prompts.py  services_gemini_logs.py  services_performance.py  services_request_perf.py
auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  security.py
database/: .db_initialized  __init__.py  connection.py  init_db.py
docs/: API.md  ARCHITECTURE.md  BERT_SISTEMA_PRODUTO_REDESIGN.md  CHANGES_GERADOR_PECAS_REFACTOR.md  CHECKLIST_RELEASE_EQUIPE.md  DATABASE.md  EXTRACTION_DETERMINISTIC.md  MODULES.md  (+16 more)
(+490 files in other folders)
